[tool.poetry]
name = "codemagic-cli-tools"
version = "0.28.0"
description = "CLI tools used in Codemagic builds"
authors = ["Priit Lätt <priit@nevercode.io>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
cryptography = ">= 3.3, !37.0.0"
google-api-python-client = ">= 1.7.12"
httplib2 = ">= 0.19.0"
oauth2client = ">= 4.1.3"
psutil = ">= 5.8.0"
pyjwt = "^2.4.0"
pyopenssl = ">= 19.0"
requests = ">= 2.25"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-quotes = "*"
ipdb = "*"
isort = "*"
mdutils = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_single_line = true
skip = [".venv"]
